# fraud-detection-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.md
.github/workflows/: ci.yaml
logs/: decision_log.csv
models/: baseline_model.pkl
src/: interface.py  model.py  preprocess.py  react_agent.py  tools.py
