[project]
name = "fraud-detection-assistant"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "streamlit>=1.38.0",
    "huggingface_hub>=0.17.0",
    "plotly>=5.22.0"
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "pre-commit>=4.2.0",
]

[project.scripts]
prep = "src.preprocess:main"
train = "src.model:main"
agent = "src.react_agent:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
